--- a/Semana-03/css/style.css
+++ b/Semana-03/css/style.css
@@ -1,13 +1,12 @@
 body{
-  /* display: flex; */
-  height: 100%;
+  display: flex;
+  height: 100vh;
 }
 aside,
 header,
 main, footer {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
-  /* height: 900px; */
 }
 h2 {
   text-align: center;
