--- a/Semana-03/css/aside.css
+++ b/Semana-03/css/aside.css
@@ -1,103 +1,101 @@
 /* side bar settings */
 aside {
-    display: flex;
-    flex-direction: column;
-    flex: 1 0 13%;
-    justify-content: space-between;
-    background-color: #FFFFFF;
-    text-align: left;
-    max-width: 188px;
+    display: none;
 }
-#option-aside>a>i, #contact-aside>a>i {
-    color: #F13312;
-    margin-right: 1%;
-}
-#option-aside > a, #contact-aside > a {
-    display: flex;
-    flex-direction: row;
-}
-#location-icon {
-    vertical-align: 14px;
-}
-.text-aside {
-    width: 100px;
-    margin-left: 15%;
-    color: #F13312;
-}
-#upper-aside {
-    display: flex;
-    background-color: hsla(239, 30%, 31%, 0.40);
-    text-align: center;
-    flex-direction: column;
-    max-height: 250px;
-}
-#upper-aside>img {
-    margin-top: 10%;
-    margin-left: 20%;
-    margin-right: 20%;
-    max-height: 200px;
-}
-#upper-aside > div{
-    flex-direction: row;
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 5%;
-    margin-top: 5%;
-}
-#upper-aside i {
-    margin-right: 10%;
-    color: #373867;
-}
-#upper-aside p {
-    font-weight: 500;
-    font-size: 20px;
-    color: #373867;
-}
-#option-aside {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* margin-top: 50px; */
-    font-size: 15px;
-}
-#contact-aside {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* padding-top: 190px; */
-    font-size: 10px;
-    color: #F13312;
-}
-#contact-aside>p {
-    align-self: flex-start;
-    margin-left: 15%;
-    font-weight: bold;
-    font-size: 14px;
-    flex-direction: row-reverse;
-}
-.contact-option {
-    margin-bottom: 20px;
-}
-.contact-option > p{
-    margin-left: 5%;
-}
-.menu-option {
-    margin-bottom: 50px;
-}
-.line-orange {
-    align-self: flex-start;
-    margin-left: 15%;
-    margin-bottom: 20px;
-    height: 2px;
-    width: 85px;
-    background: #F13312;
-}
-.text-aside:hover, #option-aside>a> i:hover,
- #contact-aside>a>i:hover{
-    color: #373867;
-}
-@media only screen and (max-width: 1024px){
-    aside{
-        display: none;
+@media only screen and (min-width: 1024px) {
+    aside {
+        display: flex;
+        flex-direction: column;
+        flex: 1 0 13%;
+        justify-content: space-between;
+        background-color: #FFFFFF;
+        text-align: left;
+        max-width: 188px;
+    }
+    #option-aside > a > i, #contact-aside > a > i {
+        color: #F13312;
+        margin-right: 1%;
+    }
+    #option-aside > a, #contact-aside > a {
+        display: flex;
+        flex-direction: row;
+    }
+    #location-icon {
+        vertical-align: 14px;
+    }
+    .text-aside {
+        width: 100px;
+        margin-left: 15%;
+        color: #F13312;
+    }
+    #upper-aside {
+        display: flex;
+        background-color: hsla(239, 30%, 31%, 0.40);
+        text-align: center;
+        flex-direction: column;
+        max-height: 250px;
+    }
+    #upper-aside > img {
+        margin-top: 10%;
+        margin-left: 20%;
+        margin-right: 20%;
+        max-height: 200px;
+    }
+    #upper-aside > div {
+        flex-direction: row;
+        display: flex;
+        justify-content: space-evenly;
+        margin-bottom: 5%;
+        margin-top: 5%;
+    }
+    #upper-aside i {
+        margin-right: 10%;
+        color: #373867;
+    }
+    #upper-aside p {
+        font-weight: 500;
+        font-size: 20px;
+        color: #373867;
+    }
+    #option-aside {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 15px;
+    }
+    #contact-aside {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 10px;
+        color: #F13312;
+    }
+    #contact-aside > p {
+        align-self: flex-start;
+        margin-left: 15%;
+        font-weight: bold;
+        font-size: 14px;
+        flex-direction: row-reverse;
+    }
+    .contact-option {
+        margin-bottom: 20px;
+    }
+    .contact-option > p {
+        margin-left: 5%;
+    }
+    .menu-option {
+        margin-bottom: 50px;
+    }
+    .line-orange {
+        align-self: flex-start;
+        margin-left: 15%;
+        margin-bottom: 20px;
+        height: 2px;
+        width: 85px;
+        background: #F13312;
+    }
+    .text-aside:hover, #option-aside > a > i:hover,
+    #contact-aside > a > i:hover {
+        color: #373867;
     }
 }
