--- a/Semana-06/views/index.html
+++ b/Semana-06/views/index.html
@@ -26,7 +26,7 @@
     <div class="wrapper">
         <aside>
             <div id="upper-aside">
-                <img src="assets/logo-trackgenix.png" alt="Logo Trackgenix">
+                <img src="../assets/logo-trackgenix.png" alt="Logo Trackgenix">
                 <div>
                     <p>Trackgenix</p>
                     <i class="fa-solid fa-angle-left fa-xl"></i>
@@ -118,12 +118,12 @@
                             </p>
                         </div>
                         <div class="img-why-right-cont">
-                            <img class="img-why-right" src="assets/productivity.png" alt="Productivity Booster">
+                            <img class="img-why-right" src="../assets/productivity.png" alt="Productivity Booster">
                         </div>
                     </div>
                     <div id="traceability-section">
                         <div class="img-why-left-cont">
-                            <img class="img-why-left" src="assets/work-traceability.png" alt="work Traceability">
+                            <img class="img-why-left" src="../assets/work-traceability.png" alt="work Traceability">
                         </div>
                         <div class="text-why-right">
                             <h3 class="title">Work Traceability</h3>
@@ -146,12 +146,13 @@
                             </p>
                         </div>
                         <div class="img-why-right-cont">
-                            <img class="img-why-right" src="assets/leadership.png" alt="Leadership and team management">
+                            <img class="img-why-right" src="../assets/leadership.png" 
+                            alt="Leadership and team management">
                         </div>
                     </div>
                     <div id="decision-making-section">
                         <div class="img-why-left-cont">
-                            <img class="img-why-left" src="assets/decision-making.png" alt="Decision making">
+                            <img class="img-why-left" src="../assets/decision-making.png" alt="Decision making">
                         </div>
                         <div class="text-why-right">
                             <h3 class="title">Decision making</h3>
@@ -170,7 +171,7 @@
                     <div id="functionalities-content">
                         <div id="hours-log">
                             <img class="image-zoom img-functionalities"
-                            src="assets/Icons/hours-log.png" alt="Hours Log">
+                            src="../assets/Icons/hours-log.png" alt="Hours Log">
                             <div class="text-functionalities">
                                 <h4>Hours log</h4>
                                 <p>
@@ -180,7 +181,7 @@
                             </div>
                         </div>
                         <div id="resource-management">
-                            <img class="image-zoom img-functionalities" src="assets/Icons/resource-management.png"
+                            <img class="image-zoom img-functionalities" src="../assets/Icons/resource-management.png"
                                 alt="Resource management">
                             <div class="text-functionalities">
                                 <h4>Resource management</h4>
@@ -191,7 +192,7 @@
                             </div>
                         </div>
                         <div id="reports">
-                            <img class="image-zoom img-functionalities" src="assets/Icons/reports.png" alt="Reports">
+                            <img class="image-zoom img-functionalities" src="../assets/Icons/reports.png" alt="Reports">
                             <div class="text-functionalities">
                                 <h4>Reports</h4>
                                 <p>
@@ -202,7 +203,7 @@
                         </div>
                         <div id="multiple-roles">
                             <img class="image-zoom img-functionalities"
-                            src="assets/Icons/multiple-roles.png" alt="Multiple roles">
+                            src="../assets/Icons/multiple-roles.png" alt="Multiple roles">
                             <div class="text-functionalities">
                                 <h4>Multiple roles</h4>
                                 <p>
@@ -284,19 +285,19 @@
             <footer>
                 <div id="social-media">
                     <a href="https://www.linkedin.com/in/gerstercristian/" target="_blank">
-                        <img class="image-zoom-footer" src="assets/Icons/linkedIn-negative.png" alt="LinkedIn">
+                        <img class="image-zoom-footer" src="../assets/Icons/linkedIn-negative.png" alt="LinkedIn">
                     </a>
                     <a href="https://www.facebook.com" target="_blank">
-                        <img class="image-zoom-footer" src="assets/Icons/facebook-negative.png" alt="Facebook">
+                        <img class="image-zoom-footer" src="../assets/Icons/facebook-negative.png" alt="Facebook">
                     </a>
                     <a href="https://www.twitter.com" target="_blank">
-                        <img class="image-zoom-footer" src="assets/Icons/twitter-negative.png" alt="Twitter">
+                        <img class="image-zoom-footer" src="../assets/Icons/twitter-negative.png" alt="Twitter">
                     </a>
                     <a href="https://www.instagram.com" target="_blank">
-                        <img class="image-zoom-footer" src="assets/Icons/instagram-negative.png" alt="Instagram">
+                        <img class="image-zoom-footer" src="../assets/Icons/instagram-negative.png" alt="Instagram">
                     </a>
                     <a href="https://www.github.com/ProDIGGY-vinilos" target="_blank">
-                        <img class="image-zoom-footer" src="assets/Icons/github-negative.png" alt="Github">
+                        <img class="image-zoom-footer" src="../assets/Icons/github-negative.png" alt="Github">
                     </a>
                 </div>
                 <h6>Rosario, Argentina</h6>
