--- a/Semana-06/views/sign-up.html
+++ b/Semana-06/views/sign-up.html
@@ -84,10 +84,10 @@
                         <input type="date" name="birthdate" placeholder="Your birthdate here">
 
                         <label class="label-contact" for="phone">Phone</label>
-                        <input type="text" name="phne" placeholder="Your phone number here">
+                        <input type="text" name="phone" placeholder="Your phone number here">
 
                         <label class="label-contact" for="addres">Address</label>
-                        <input type="text" name="addres" placeholder="Your addres here">
+                        <input type="text" name="address" placeholder="Your addres here">
 
                         <label class="label-contact" for="location">Location</label>
                         <input type="text" name="location" placeholder="Your location here">
