BaSP-W06: Validation Signup done

--- a/Semana-06/views/sign-up.html
+++ b/Semana-06/views/sign-up.html
@@ -107,7 +107,7 @@
                     </div>
                     <div id="btn-form">
                         <button type="submit" id="submit-btn">
-                            Sign Up
+                            Create
                         </button>
                         <button type="reset" id="reset-btn"><i id="cross-icon" class="fa-solid fa-xmark fa-sm"></i>
                             Reset
